# zalo-python

./: README_WINDOWS.md  build_windows_app.py  hello.py  install_python.bat  pyproject.toml  requirements.txt  run.bat  run_zalo_app.bat  vietnamese_to_telex.py  zalo-gui.py  zalo.py  zalo_app.spec  zalo_status_20250611_153719.csv  zalo_status_20250611_154256.csv  zalo_status_20250611_154443.csv  zalo_status_20250611_154908.csv  zalo_status_20250611_155507.csv  zalo_status_20250611_155625.csv  zalo_status_20250611_155926.csv  zalo_status_20250611_160518.csv  zalo_status_20250611_160701.csv  zalo_status_20250611_161053.csv  zalo_status_20250611_161103.csv  zalo_status_20250611_161113.csv  zalo_status_20250611_161138.csv  zalo_status_20250611_161206.csv  zalo_status_20250611_161216.csv  zalo_status_20250611_161534.csv  zalo_status_20250611_161711.csv  zalo_status_20250611_162157.csv  zalo_status_20250611_162334.csv  zalo_status_20250611_163140.csv  zalo_status_20250611_163316.csv  zalo_status_20250611_163654.csv  zalo_status_20250611_163958.csv
