[project]
name = "zalo-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bogo>=1.1",
    "openpyxl==3.1.2",
    "pandas==2.1.0",
    "pyautogui==0.9.54",
    "selenium==4.10.0",
    "streamlit==1.28.0",
    "webdriver-manager==4.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
